Updated Correlation Function attribute
numeric_only = True 
attribute added in correlation function as 'id' feature of price_churn dataset is causing error - "string cannot be converted into float"

--- a/Exploratory_Data_Analysis_BCG.ipynb
+++ b/Exploratory_Data_Analysis_BCG.ipynb
@@ -3335,7 +3335,7 @@
     {
       "cell_type": "code",
       "source": [
-        "corr = price_churn.corr()\n",
+        "corr = price_churn.corr(numeric_only = True)\n",
         "# Plot correlation\n",
         "plt.figure(figsize=(20,18))\n",
         "sns.heatmap(corr, xticklabels=corr.columns.values, yticklabels=corr.columns.values, cmap='Greens', annot = True, annot_kws={'size':10})\n",
